[package]
name = "minecraft-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14.0"
pollster = "0.2.5"
cgmath = "0.18"
bytemuck = { version = "1.4", features = [ "derive" ] }
instant = "0.1"
cfg-if = "1"
anyhow = "1.0"
etagere = "0.2.7"
hecs = "0.9.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
